auth.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
    name: auth-depl 
spec: 
    replicas: 2
    selector: 
        matchLabels:
            app: auth
    template: 
        metadata: 
            labels: 
                app: auth 
        spec: 
            containers: 
                - name: auth 
                  image: xyz/abc-auth
                  ports: 
                    - containerPort: 8080 
                
---
apiVersion: v1 
kind: Service 
metadata: 
    name: auth-srv 
spec: 
    type: ClusterIP
    selector: 
        app: auth 
    ports: 
        - name: auth 
          protocol: TCP 
          port: 8080
          targetPort: 8080
