backend.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
    name: backend-depl 
spec: 
    replicas: 2
    selector: 
        matchLabels:
            app: backend
    template: 
        metadata: 
            labels: 
                app: backend 
        spec: 
            containers: 
                - name: backend 
                  image: xyz/abc-backend
                  ports: 
                    - containerPort: 8080 
                
---
apiVersion: v1 
kind: Service 
metadata: 
    name: backend-srv 
spec: 
    type: ClusterIP
    selector: 
        app: backend 
    ports: 
        - name: backend 
          protocol: TCP 
          port: 8080
          targetPort: 8080
