webapp.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
    name: webapp-depl 
spec: 
    replicas: 2
    selector: 
        matchLabels:
            app: webapp
    template: 
        metadata: 
            labels: 
                app: webapp 
        spec: 
            containers: 
                - name: webapp 
                  image: xyz/abc-webapp
                  ports: 
                    - containerPort: 8080 
                
---
apiVersion: v1 
kind: Service 
metadata: 
    name: webapp-srv 
spec: 
    type: ClusterIP
    selector: 
        app: webapp 
    ports: 
        - name: webapp 
          protocol: TCP 
          port: 8080 
          targetPort: 8080
